[metadata]
# replace with your username:
name = TESS_PRF
version = 0.0.4
author = Keaton Bell
author_email = keatonbell@utexas.edu
description = Tools to display the TESS pixel response function (PRF) at any location on the detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keatonb/TESS_PRF
project_urls =
    Bug Tracker = https://github.com/keatonb/TESS_PRF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = PRF
packages = find:
python_requires = >=3.6

[options.packages.find]
where = PRF
